Src/BootCamp.Chapter/Examples/CompositionVsInheritance/Bad/MovingStatue.cs
namespace BootCamp.Chapter.Examples.CompositionVsInheritance.Bad
{
    public class MovingStatue
    {

    }
}